--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   },
   "dependencies": {
     "@tarikjabiri/dxf": "^2.8.9",
+    "dxf-viewer": "^1.0.42",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
+    "osmtogeojson": "^3.0.0-beta.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
-    "osmtogeojson": "^3.0.0-beta.5"
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/leaflet": "^1.9.8",
+    "@types/node": "^22.13.10",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/leaflet": "^1.9.8",
+    "@types/three": "^0.174.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
